@@ -1,5 +1,6 @@
 Changes for 1.6.1
 
+ - [ZBX-570] fixed possible server crash if flexible interval delay is 0 sec. (Sasha)
  - [ZBX-565] fixed filtering of conf->triggers (Artem)
  - [ZBX-563] added support of user parameters with -t option (Sasha)
  - [ZBX-562] fixed improper host group delete action (Artem)
